oswam-tui/src/snapshots/oswam_tui__render__tests__help_overlay.snap
---
source: oswam-tui/src/render.rs
expression: draw(&app)
---
"┌ Категории ─────────────────────────┐┌ Описание ──────────────────────────────┐"
"│[x] C ✓ Системный мусор  1.5 MB     ││✓ Safe                                  │"
"│[-] B ▲ Большие данные  8.5 GB      ││Безопасно: регенерируемый кэш,          │"
"│                                    ││приложение пересоздаст.                 │"
"│    ┌ Справка (любая клавиша — закрыть, ↑↓hjkl — скролл) ────────────────┐    │"
"│    │Навигация:  j/k ↑/↓  ·  h/l панели  ·  Tab  ·  g/G  ·  Ctrl+d/Ctrl+u│тно │"
"│    │Space      выбрать категорию/файл                                   │    │"
"│    │o          группировка (категория/размер/риск)                      │────┘"
"│    │t          тема (тёмная/светлая)                                    │────┐"
"│    │Ctrl+P     удалить выбранное (Корзина/безвозвратно)                 │    │"
"│    │?          справка   ·   q  выход                                   │    │"
"│    │                                                                    │    │"
"│    │Цвет + символ риска: ✓ Safe · ▲ Caution · ✗ Danger · ⛔ Never       │    │" Hidden by multi-width symbols: [(60, " ")]
"│    │                                                                    │    │"
"│    │                                                                    │    │"
"│    └────────────────────────────────────────────────────────────────────┘    │"
"│                                    ││                                        │"
"│                                    ││                                        │"
"└────────────────────────────────────┘└────────────────────────────────────────┘"
" Ctrl+P: удалить · Space: выбор · o: группировка · t: тема · ?: справка · q: вых"
