oswam-tui/src/snapshots/oswam_tui__render__tests__main_layout_dark.snap
---
source: oswam-tui/src/render.rs
expression: draw(&app)
---
"┌ Категории ─────────────────────────┐┌ Описание ──────────────────────────────┐"
"│[x] C ✓ Системный мусор  1.5 MB     ││✓ Safe                                  │"
"│[-] B ▲ Большие данные  8.5 GB      ││Безопасно: регенерируемый кэш,          │"
"│                                    ││приложение пересоздаст.                 │"
"│                                    ││                                        │"
"│                                    ││Удалит содержимое (Корзина/безвозвратно │"
"│                                    ││по выбору)                              │"
"│                                    │└────────────────────────────────────────┘"
"│                                    │┌ Файлы ─────────────────────────────────┐"
"│                                    ││[x] ✓ ~/Library/Logs          1.5 MB    │"
"│                                    ││                                        │"
"│                                    ││                                        │"
"│                                    ││                                        │"
"│                                    ││                                        │"
"│                                    ││                                        │"
"│                                    ││                                        │"
"│                                    ││                                        │"
"│                                    ││                                        │"
"└────────────────────────────────────┘└────────────────────────────────────────┘"
" Ctrl+P: удалить · Space: выбор · o: группировка · t: тема · ?: справка · q: вых"
